--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/QuanLyCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/QuanLyCongNhan.fxml
@@ -16,6 +16,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.QuanLyCongNhanController">
         <center>
@@ -63,7 +64,7 @@
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
                             <Label text="Giới tính: " />
-                            <ComboBox fx:id="cbxLoadGioiTinhTTCongNhan" prefHeight="26.0" prefWidth="70.0" />
+                            <ComboBox fx:id="cbxLoadGioiTinhTTCongNhan" prefHeight="26.0" prefWidth="70.0" promptText="Chọn giới tính" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -72,7 +73,7 @@
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
                             <Label text="Vai trò: " />
-                            <ComboBox fx:id="cbxLoadVaiTroTTCongNhan" prefHeight="26.0" prefWidth="125.0" />
+                            <ComboBox fx:id="cbxLoadVaiTroTTCongNhan" prefHeight="26.0" prefWidth="125.0" promptText="Chọn vai trò" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -81,7 +82,7 @@
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
                             <Label text="Tổ sản xuất:" />
-                            <ComboBox fx:id="cbxLoadToSanXuatTTCongNhan" prefHeight="26.0" prefWidth="183.0" />
+                            <ComboBox fx:id="cbxLoadToSanXuatTTCongNhan" prefHeight="26.0" prefWidth="183.0" promptText="Chọn tổ sản xuất" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -96,20 +97,50 @@
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding>
+         <BorderPane.margin>
+            <Insets left="380.0" />
+         </BorderPane.margin>
             </HBox>
         </top>
-        <right>
-      <VBox alignment="TOP_CENTER" spacing="10.0">
+        <bottom>
+            <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
+                <children>
+                    <Button fx:id="btnResetTTCongNhan" mnemonicParsing="false" onAction="#resetBangTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Làm mới">
+                        <graphic>
+                            <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="@../../images/icons/reset-removebg-preview.png" />
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                    <Button fx:id="btnLuuTTCongNhan" mnemonicParsing="false" onAction="#luuTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Lưu">
+                        <graphic>
+                            <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="@../../images/icons/save.png" />
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                </children>
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="20.0" top="10.0" />
+                </padding>
+            </HBox>
+        </bottom>
+   <left>
+      <VBox alignment="TOP_CENTER" spacing="10.0" style="-fx-border-color: black;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="106.66666666667" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons/avatar.png" />
-               </image>
-            </ImageView>
+            <Label text="Nhập thông tin công nhân">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Mã số công nhân" />
-                  <TextField fx:id="tfMaSoTTCongNhan" disable="true" editable="false" prefHeight="26.0" prefWidth="218.0" />
+                  <TextField fx:id="tfMaSoTTCongNhan" disable="true" editable="false" prefHeight="26.0" prefWidth="218.0" promptText="Mã công nhân" />
                </children>
                <padding>
                   <Insets left="5.0" />
@@ -118,7 +149,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Tên công nhân" />
-                  <TextField fx:id="tfTenTTCongNhan" prefHeight="26.0" prefWidth="232.0" />
+                  <TextField fx:id="tfTenTTCongNhan" prefHeight="26.0" prefWidth="232.0" promptText="Tên công nhân" />
                </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
@@ -152,7 +183,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Số điện thoại: " />
-                  <TextField fx:id="tfSoDienThoaiTTCongNhan" prefHeight="26.0" prefWidth="235.0">
+                  <TextField fx:id="tfSoDienThoaiTTCongNhan" prefHeight="26.0" prefWidth="235.0" promptText="Số điện thoại 10 số">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -165,7 +196,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Email: " />
-                  <TextField fx:id="tfEmailTTCongNhan" prefHeight="26.0" prefWidth="277.0" />
+                  <TextField fx:id="tfEmailTTCongNhan" prefHeight="26.0" prefWidth="277.0" promptText="Email" />
                </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
@@ -174,7 +205,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Số tài khoản: " />
-                  <TextField fx:id="tfSoTaiKhoanTTCongNhan" alignment="BASELINE_LEFT" prefHeight="26.0" prefWidth="241.0" />
+                  <TextField fx:id="tfSoTaiKhoanTTCongNhan" alignment="BASELINE_LEFT" prefHeight="26.0" prefWidth="241.0" promptText="Số tài khoản" />
                </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
@@ -183,7 +214,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Tổ" />
-                  <ComboBox fx:id="cbxToSanXuatTTCongNhan" prefHeight="26.0" prefWidth="298.0" />
+                  <ComboBox fx:id="cbxToSanXuatTTCongNhan" prefHeight="26.0" prefWidth="298.0" promptText="Chọn tổ sản xuất" />
                </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
@@ -192,7 +223,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Phụ cấp" />
-                  <ComboBox fx:id="cbxPhuCapTTCongNhan" prefHeight="26.0" prefWidth="268.0" />
+                  <ComboBox fx:id="cbxPhuCapTTCongNhan" prefHeight="26.0" prefWidth="268.0" promptText="Chọn phụ cấp" />
                </children>
                <padding>
                   <Insets left="5.0" />
@@ -202,8 +233,8 @@
                <children>
                   <HBox alignment="CENTER" spacing="10.0">
                      <children>
-                        <Label text="Vai tró" />
-                        <ComboBox fx:id="cbxVaiTroTTCongNhan" prefHeight="26.0" prefWidth="269.0" />
+                        <Label text="Vai trò" />
+                        <ComboBox fx:id="cbxVaiTroTTCongNhan" prefHeight="26.0" prefWidth="269.0" promptText="Chọn vai trò" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -228,22 +259,22 @@
                   </HBox>
                </children>
             </HBox>
-            <HBox alignment="CENTER" spacing="120.0">
+            <HBox alignment="CENTER" spacing="50.0">
                <children>
-                  <Button fx:id="btnThemTTCongNhan" mnemonicParsing="false" onAction="#themTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Thêm">
+                  <Button fx:id="btnThemTTCongNhan" mnemonicParsing="false" onAction="#themTTCongNhan" prefHeight="30.0" prefWidth="150.0" text="Thêm">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/icons/add-removebg-preview.png" />
+                              <Image url="@../../images/icons/add-removebg-preview.png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="btnLamMoiTTCongNhan" mnemonicParsing="false" onAction="#xoaTrangTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Làm mới">
+                  <Button fx:id="btnLamMoiTTCongNhan" mnemonicParsing="false" onAction="#xoaTrangTTCongNhan" prefHeight="30.0" prefWidth="150.0" text="Làm mới">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/icons/XoaTrang.png" />
+                              <Image url="@../../images/icons/XoaTrang.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -256,22 +287,22 @@
                   <Insets left="5.0" right="5.0" />
                </padding>
             </HBox>
-            <HBox alignment="CENTER" spacing="120.0">
+            <HBox alignment="CENTER" spacing="50.0">
                <children>
-                  <Button fx:id="btnSuaTTCongNhan" mnemonicParsing="false" onAction="#suaTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Sửa">
+                  <Button fx:id="btnSuaTTCongNhan" mnemonicParsing="false" onAction="#suaTTCongNhan" prefHeight="30.0" prefWidth="150.0" text="Sửa">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/icons/edit-removebg-preview.png" />
+                              <Image url="@../../images/icons/edit-removebg-preview.png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="btnXoaTTCongNhan" mnemonicParsing="false" onAction="#xoaTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Xóa">
+                  <Button fx:id="btnXoaTTCongNhan" mnemonicParsing="false" onAction="#xoaTTCongNhan" prefHeight="30.0" prefWidth="150.0" text="Xóa">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/icons/trash-removebg-preview.png" />
+                              <Image url="@../../images/icons/trash-removebg-preview.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -285,33 +316,9 @@
          <padding>
             <Insets top="10.0" />
          </padding>
+         <BorderPane.margin>
+            <Insets left="10.0" right="10.0" />
+         </BorderPane.margin>
       </VBox>
-        </right>
-        <bottom>
-            <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
-                <children>
-                    <Button fx:id="btnResetTTCongNhan" mnemonicParsing="false" onAction="#resetBangTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Reset">
-                        <graphic>
-                            <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../images/icons/reset-removebg-preview.png" />
-                                </image>
-                            </ImageView>
-                        </graphic>
-                    </Button>
-                    <Button fx:id="btnLuuTTCongNhan" mnemonicParsing="false" onAction="#luuTTCongNhan" prefHeight="30.0" prefWidth="94.0" text="Lưu">
-                        <graphic>
-                            <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../images/icons/save.png" />
-                                </image>
-                            </ImageView>
-                        </graphic>
-                    </Button>
-                </children>
-                <padding>
-                    <Insets bottom="5.0" left="5.0" right="20.0" top="10.0" />
-                </padding>
-            </HBox>
-        </bottom>
+   </left>
     </BorderPane>
