--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TamUngCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TamUngCongNhan.fxml
@@ -99,6 +99,9 @@
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" />
                </padding>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
             </VBox>
             <HBox alignment="CENTER_LEFT">
                <children>
@@ -155,9 +158,9 @@
                </padding>
             </HBox>
          </children>
-         <padding>
-            <Insets left="3.0" right="3.0" />
-         </padding>
+         <BorderPane.margin>
+            <Insets left="10.0" right="10.0" />
+         </BorderPane.margin>
       </VBox>
    </left>
     </BorderPane>
