--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TimKiemCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TimKiemCongNhan.fxml
@@ -37,7 +37,7 @@
             <HBox alignment="CENTER" spacing="10.0">
                <children>
                   <Label text="Mã công nhân:" />
-                  <TextField fx:id="tfMaCongNhan" />
+                  <TextField fx:id="tfMaCongNhan" promptText="Nhập mã công nhân" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -46,7 +46,7 @@
             <HBox alignment="CENTER" spacing="10.0">
                <children>
                   <Label text="Vai trò" />
-                  <ComboBox fx:id="cbxVaTro" prefHeight="26.0" prefWidth="196.0" />
+                  <ComboBox fx:id="cbxVaTro" prefHeight="26.0" prefWidth="196.0" promptText="Chọn vai trò" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -55,7 +55,7 @@
             <HBox alignment="CENTER" prefHeight="30.0" prefWidth="270.0" spacing="10.0">
                <children>
                   <Label text="Tổ sản xuất:" />
-                  <ComboBox fx:id="cbxToSanXuat" prefHeight="26.0" prefWidth="183.0" />
+                  <ComboBox fx:id="cbxToSanXuat" prefHeight="26.0" prefWidth="183.0" promptText="Chọn tổ sản xuất" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
