--- a/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/TimKiemNhanVien.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/TimKiemNhanVien.fxml
@@ -37,7 +37,7 @@
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
                             <Label text="Mã nhân viên:" />
-                  <TextField fx:id="tfMaNhanVie" />
+                  <TextField fx:id="tfMaNhanVie" promptText="Nhập mã nhân viên" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -46,7 +46,7 @@
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
                             <Label text="Chức vụ: " />
-                            <ComboBox fx:id="cbxChucVu" prefHeight="26.0" prefWidth="196.0" />
+                            <ComboBox fx:id="cbxChucVu" prefHeight="26.0" prefWidth="196.0" promptText="Chọn chức vụ" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -55,7 +55,7 @@
                     <HBox alignment="CENTER" prefHeight="30.0" prefWidth="270.0" spacing="10.0">
                         <children>
                             <Label text="Phòng ban: " />
-                            <ComboBox fx:id="cbxPhongBan" prefHeight="26.0" prefWidth="183.0" />
+                            <ComboBox fx:id="cbxPhongBan" prefHeight="26.0" prefWidth="183.0" promptText="Chọn phòng ban" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
