--- a/src/main/resources/com/openjfx/qllspahg/fxml/SanPham/QuanLySanPham.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/SanPham/QuanLySanPham.fxml
@@ -18,8 +18,79 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.QuanLySanPhamController">
-   <right>
-      <VBox alignment="TOP_RIGHT" spacing="5.0">
+   <center>
+      <SplitPane dividerPositions="0.5" orientation="VERTICAL" BorderPane.alignment="CENTER">
+         <items>
+            <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+               <content>
+                  <TableView fx:id="tblSanPham" editable="true" onMouseClicked="#chonMotSanPham" tableMenuButtonVisible="true">
+                     <columns>
+                        <TableColumn fx:id="colSTTSanPham" prefWidth="36.0" text="STT" />
+                        <TableColumn fx:id="colMaSanPham" minWidth="-1.0" prefWidth="180.0" text="Mã sản phẩm" />
+                        <TableColumn fx:id="colTenSanPham" minWidth="-1.0" prefWidth="237.0" text="Tên sản phẩm" />
+                        <TableColumn fx:id="colLoaiSanPham" minWidth="-1.0" prefWidth="120.0" text="Phân loại" />
+                        <TableColumn fx:id="colGiaSanPham" minWidth="-1.0" prefWidth="121.0" text="Giá sản phẩm" />
+                     </columns>
+                  </TableView>
+               </content>
+            </ScrollPane>
+            <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+               <content>
+                  <TableView fx:id="tblCongDoan" editable="true" onMouseClicked="#chonMotCongDoan" tableMenuButtonVisible="true">
+                     <columns>
+                        <TableColumn fx:id="colSTTCongDoan" prefWidth="32.0" text="STT" />
+                        <TableColumn fx:id="colMaCongDoan" prefWidth="162.0" text="Mã công đoạn" />
+                        <TableColumn fx:id="colTenCongDoan" minWidth="-1.0" prefWidth="160.0" text="Tên công đoạn" />
+                        <TableColumn fx:id="colGiaiDoanCongDoan" minWidth="-1.0" prefWidth="136.0" text="Giai đoạn sản xuất" />
+                        <TableColumn fx:id="colGiaCongDoan" minWidth="-1.0" prefWidth="97.0" text="Đơn giá công đoạn" />
+                     </columns>
+                  </TableView>
+               </content>
+            </ScrollPane>
+         </items>
+      </SplitPane>
+   </center>
+   <top>
+      <Pane nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER" spacing="10.0">
+               <children>
+                  <HBox alignment="CENTER" spacing="10.0">
+                     <children>
+                        <Label text="Mã sản phẩm:" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfLocMaSP" promptText="Nhập mã sản phẩm" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" spacing="10.0">
+                     <children>
+                        <Label text="Tên sản phẩm:" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfLocTenSP" promptText="Nhập tên sản phẩm" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <Label text="Loại sản phẩm:" HBox.hgrow="ALWAYS" />
+                        <ComboBox fx:id="cbxLocLoaiSanPham" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <Button mnemonicParsing="false" onAction="#layDuLieuLoc" text="Lấy dữ liệu " HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </HBox>
+         </children>
+      </Pane>
+   </top>
+   <bottom>
+      <Pane BorderPane.alignment="CENTER" />
+   </bottom>
+   <left>
+      <VBox alignment="TOP_RIGHT" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
             <VBox alignment="CENTER" style="-fx-border-color: black;">
                <children>
@@ -277,76 +348,5 @@
             <Insets />
          </BorderPane.margin>
       </VBox>
-   </right>
-   <center>
-      <SplitPane dividerPositions="0.5" orientation="VERTICAL" BorderPane.alignment="CENTER">
-         <items>
-            <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-               <content>
-                  <TableView fx:id="tblSanPham" editable="true" onMouseClicked="#chonMotSanPham" tableMenuButtonVisible="true">
-                     <columns>
-                        <TableColumn fx:id="colSTTSanPham" prefWidth="36.0" text="STT" />
-                        <TableColumn fx:id="colMaSanPham" minWidth="-1.0" prefWidth="180.0" text="Mã sản phẩm" />
-                        <TableColumn fx:id="colTenSanPham" minWidth="-1.0" prefWidth="237.0" text="Tên sản phẩm" />
-                        <TableColumn fx:id="colLoaiSanPham" minWidth="-1.0" prefWidth="120.0" text="Phân loại" />
-                        <TableColumn fx:id="colGiaSanPham" minWidth="-1.0" prefWidth="121.0" text="Giá sản phẩm" />
-                     </columns>
-                  </TableView>
-               </content>
-            </ScrollPane>
-            <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-               <content>
-                  <TableView fx:id="tblCongDoan" editable="true" onMouseClicked="#chonMotCongDoan" tableMenuButtonVisible="true">
-                     <columns>
-                        <TableColumn fx:id="colSTTCongDoan" prefWidth="32.0" text="STT" />
-                        <TableColumn fx:id="colMaCongDoan" prefWidth="162.0" text="Mã công đoạn" />
-                        <TableColumn fx:id="colTenCongDoan" minWidth="-1.0" prefWidth="160.0" text="Tên công đoạn" />
-                        <TableColumn fx:id="colGiaiDoanCongDoan" minWidth="-1.0" prefWidth="136.0" text="Giai đoạn sản xuất" />
-                        <TableColumn fx:id="colGiaCongDoan" minWidth="-1.0" prefWidth="97.0" text="Đơn giá công đoạn" />
-                     </columns>
-                  </TableView>
-               </content>
-            </ScrollPane>
-         </items>
-      </SplitPane>
-   </center>
-   <top>
-      <Pane nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
-         <children>
-            <HBox alignment="CENTER" spacing="10.0">
-               <children>
-                  <HBox alignment="CENTER" spacing="10.0">
-                     <children>
-                        <Label text="Mã sản phẩm:" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="tfLocMaSP" promptText="Nhập mã sản phẩm" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" spacing="10.0">
-                     <children>
-                        <Label text="Tên sản phẩm:" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="tfLocTenSP" promptText="Nhập tên sản phẩm" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
-                     <children>
-                        <Label text="Loại sản phẩm:" HBox.hgrow="ALWAYS" />
-                        <ComboBox fx:id="cbxLocLoaiSanPham" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <Button mnemonicParsing="false" onAction="#layDuLieuLoc" text="Lấy dữ liệu " HBox.hgrow="ALWAYS">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Button>
-               </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </HBox>
-         </children>
-      </Pane>
-   </top>
-   <bottom>
-      <Pane BorderPane.alignment="CENTER" />
-   </bottom>
+   </left>
 </BorderPane>
