--- a/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinh.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinh.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -160,12 +159,10 @@
       </HBox>
    </bottom>
    <center>
-      <AnchorPane BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fitHeight="720.0" fitWidth="1280.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/logoAHG.png" />
-               </image></ImageView>
-         </children></AnchorPane>
+      <ImageView nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/logoAHG.png" />
+         </image>
+      </ImageView>
    </center>
 </BorderPane>
